[gd_scene load_steps=4 format=2]

[ext_resource path="res://speed_controller.dae" type="PackedScene" id=1]
[ext_resource path="res://speed_controller.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1.12745, 1.13276, 1.15924 )

[node name="Scene Root" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="." index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.687604, 0 )
shape = SubResource( 1 )
disabled = false

[node name="Cylinder_001" parent="." index="3"]

transform = Transform( -5.6426e-08, 0.2, 0, -0.0415823, -1.17316e-08, -0.19563, -0.19563, -5.5193e-08, 0.0415823, -0.635763, 0, 0 )
_sections_unfolded = [ "Transform" ]

[connection signal="input_event" from="StaticBody" to="." method="_on_StaticBody_input_event"]

[connection signal="mouse_exited" from="StaticBody" to="." method="_on_StaticBody_mouse_exited"]


